--- a/userChrome.css
+++ b/userChrome.css
@@ -49,7 +49,7 @@ menubar > menu[open] {
     flex-direction: row-reverse !important;
     position: absolute !important;
     display: flex !important;
-    width: calc(100vw - 56px) !important;
+    width: calc(100vw - 57px) !important;
     height: 25px !important;
     justify-content: space-between !important;
 }
@@ -60,7 +60,18 @@ menubar > menu[open] {
     flex-direction: row-reverse !important;
     position: absolute !important;
     display: flex !important;
-    width: calc(100vw - 56px) !important;
+    width: calc(100vw - 57px) !important;
+    height: 25px !important;
+    justify-content: space-between !important;
+}
+:root[spacestoolbar="true"] #toolbar-menubar:not([autohide="true"]) .titlebar-buttonbox {
+    margin-top: 31px !important;
+    margin-left: 45px !important;
+    appearance: none !important;
+    flex-direction: row-reverse !important;
+    position: absolute !important;
+    display: flex !important;
+    width: calc(100vw - 60px) !important;
     height: 25px !important;
     justify-content: space-between !important;
 }
@@ -79,7 +90,7 @@ menubar > menu[open] {
     margin: 0px 41px 0px 45px !important;
     z-index: 1 !important;
 }
-#mail-toolbox {
+.mail-toolbox {
     margin-top: -78px !important;
     margin-bottom: 35px !important;
     border-radius: 7px 7px 0px 0px !important;
@@ -212,7 +223,7 @@ toolbarseparator {
 /* system colors focus */
 
 #tabs-toolbar:-moz-window-inactive {
-    background: linear-gradient(180deg, #EAEAEA 0px, #E9E9E9 42px, rgba(0,0,0,0.17) 42px, rgba(0,0,0,0.17) 43px, rgba(239,239,239,1) 44px, rgba(236,236,236,1) 44px, rgba(250,250,250,1) 46px, rgba(250,250,250,1) 100%) !important;
+    background: linear-gradient(180deg, #EAEAEA 0px, #E9E9E9 42px, rgba(0,0,0,0.17) 42px, rgba(0,0,0,0.17) 43px, rgba(236,236,236,1) 44px, rgba(250,250,250,1) 46px, rgba(250,250,250,1) 100%) !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
     background: #FAFAFA !important;
@@ -240,7 +251,7 @@ toolbarseparator {
     --toolbarbutton-active-boxshadow: 0 1px 1px #D8D8D8 inset, 0 0 1px #BEBEBE inset !important;
 }
 #tabs-toolbar {
-    background: linear-gradient(180deg, #E5E5E5 0px, #DFDFDF 42px, rgba(0,0,0,0.17) 42px, rgba(0,0,0,0.17) 43px, rgba(239,239,239,1) 44px, rgba(241,241,241,1) 46px, rgba(241,241,241,1) 99%, rgba(223,223,223,1) 100%) !important;
+    background: linear-gradient(180deg, #E5E5E5 0px, #DFDFDF 42px, rgba(0,0,0,0.17) 42px, rgba(0,0,0,0.17) 43px, rgba(229,229,229,1) 44px, rgba(241,241,241,1) 47px, rgba(241,241,241,1) 99%, rgba(223,223,223,1) 100%) !important;
     border-bottom: 1px solid rgba(0,0,0,0.17) !important;
 }
 .tab-background[selected="true"] {
