--- a/Thunderbird Beta theme/userChrome.css
+++ b/Thunderbird Beta theme/userChrome.css
@@ -7,7 +7,7 @@
 /****** menu bar ******/
 
 #toolbar-menubar {
-    border-bottom: none !important;
+    margin-bottom: -1px !important;
 }
 
 /****** window controls buttons ******/
@@ -97,6 +97,9 @@ toolbarseparator {
     min-height: 48px !important;
     max-height: 48px !important;
 }
+unified-toolbar {
+  border-bottom: none !important;
+}
 
 /**** tabs ****/
 
@@ -107,8 +110,8 @@ toolbarseparator {
     --tab-max-width: 225px !important;
 }
 #tabs-toolbar {
-    min-height: 35px !important;
-    max-height: 35px !important;
+    min-height: 36px !important;
+    max-height: 36px !important;
     box-shadow: none !important;
 }
 .tabmail-tab[selected="true"] {
@@ -225,6 +228,8 @@ toolbarseparator {
 
 #tabs-toolbar:-moz-window-inactive {
     background: linear-gradient(180deg, rgba(236,236,236,1) 0%, rgba(250,250,250,1) 10%, rgba(250,250,250,1) 100%) !important;
+    border-top: 1px solid rgba(0,0,0,0.17) !important;
+    border-bottom: 1px solid rgba(0,0,0,0.17) !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
     background: #FAFAFA !important;
@@ -241,6 +246,7 @@ toolbarseparator {
 
 #tabs-toolbar {
     background: linear-gradient(180deg, rgba(223,223,223,1) 0%, rgba(241,241,241,1) 10%, rgba(241,241,241,1) 98%, rgba(223,223,223,1) 100%) !important;
+    border-top: 1px solid rgba(0,0,0,0.17) !important;
     border-bottom: 1px solid rgba(0,0,0,0.17) !important;
 }
 .tab-background[selected="true"] {
@@ -255,7 +261,7 @@ toolbarseparator {
     background: rgba(51,51,51, 0.15) !important;
 }
 #toolbar-menubar {
-    background-color: #E5E5E5 !important;
+    background-color: #E3E3E3 !important;
 }
 #spacesPinnedButton:not([type="menu-button"], [disabled="true"]):is([open="true"], [checked="true"], :hover:active) {
     border-color: none !important;
@@ -270,6 +276,7 @@ toolbarseparator {
 
 #tabs-toolbar:-moz-lwtheme-brighttext:-moz-window-inactive {
 	background: linear-gradient(180deg, rgb(48, 48, 48) 0%, rgb(51, 51, 51) 10%, rgb(51, 51, 51) 100%) !important;
+	border-top: 1px solid rgba(27, 27, 27, 1) !important;
 	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"]:-moz-lwtheme-brighttext:-moz-window-inactive {
@@ -277,7 +284,7 @@ toolbarseparator {
 	border: 1px solid rgba(45,45,45,1) !important;
 }
 #toolbar-menubar:-moz-lwtheme-brighttext:-moz-window-inactive {
-    background-color: #3B3B3B !important;
+    background-color: #383838 !important;
 }
 input[type="search"]:-moz-lwtheme-brighttext:-moz-window-inactive {
     min-height: 27px !important;
@@ -296,6 +303,7 @@ input[type="search"]:-moz-lwtheme-brighttext {
 }
 #tabs-toolbar:-moz-lwtheme-brighttext {
 	background: linear-gradient(180deg, rgb(42, 42, 42) 0%, rgb(45, 45, 45) 10%, rgb(45, 45, 45) 100%) !important;
+	border-top: 1px solid rgba(27, 27, 27, 1) !important;
 	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"]:-moz-lwtheme-brighttext {
@@ -322,7 +330,7 @@ toolbarseparator:-moz-lwtheme-brighttext  {
     background-repeat: repeat !important;
 }
 #toolbar-menubar:-moz-lwtheme-brighttext {
-    background-color: #343434 !important;
+    background-color: #2F2F2F !important;
 }
 
 /* system dark focus */
@@ -330,6 +338,7 @@ toolbarseparator:-moz-lwtheme-brighttext  {
 @media (prefers-color-scheme: dark) {
 #tabs-toolbar:-moz-window-inactive {
 	background: linear-gradient(180deg, rgb(48, 48, 48) 0%, rgb(51, 51, 51) 10%, rgb(51, 51, 51) 100%) !important;
+	border-top: 1px solid rgba(27, 27, 27, 1) !important;
 	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
@@ -338,7 +347,7 @@ toolbarseparator:-moz-lwtheme-brighttext  {
     border-bottom: 1px solid rgba(255,255,255,0.05) !important;
 }
 #toolbar-menubar:-moz-window-inactive {
-    background-color: #3B3B3B !important;
+    background-color: #383838 !important;
 }
 input[type="search"]:-moz-window-inactive {
     min-height: 27px !important;
@@ -357,6 +366,7 @@ input[type="search"] {
 }
 #tabs-toolbar {
 	background: linear-gradient(180deg, rgb(42, 42, 42) 0%, rgb(45, 45, 45) 10%, rgb(45, 45, 45) 100%) !important;
+	border-top: 1px solid rgba(27, 27, 27, 1) !important;
 	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"] {
@@ -384,5 +394,5 @@ toolbarseparator {
     background-repeat: repeat !important;
 }
 #toolbar-menubar {
-    background-color: #343434 !important;
+    background-color: #2F2F2F !important;
 }}
