--- a/Thunderbird Beta theme/userChrome.css
+++ b/Thunderbird Beta theme/userChrome.css
@@ -17,7 +17,7 @@
 }
 .titlebar-buttonbox {
     appearance: none !important;
-    top: -12px !important;
+    top: -13px !important;
     position: absolute !important;
     flex-direction: row !important;
     display: flex !important;
@@ -45,7 +45,7 @@
 
 :root[spacestoolbar="true"] .titlebar-buttonbox {
     appearance: none !important;
-    top: -12px !important;
+    top: -13px !important;
     margin-right: 40px !important;
     position: absolute !important;
     flex-direction: row !important;
@@ -86,8 +86,8 @@ toolbarseparator {
     margin: 4px 0px 4px 0px !important;
 }
 :root[uidensity="compact"] #unifiedToolbar {
-    min-height: 38px !important;
-    max-height: 38px !important;
+    min-height: 39px !important;
+    max-height: 39px !important;
 }
 :root[uidensity="touch"] #unifiedToolbar {
     min-height: 58px !important;
@@ -196,6 +196,7 @@ unified-toolbar {
     box-shadow: none !important;
     padding: 0px !important;
     margin-inline: 6px !important;
+    margin-top: 5px !important;
 }
 :root:not([uidensity="compact"]):not([uidensity="touch"]) #button-appmenu:is([open="true"], :active) {
     min-width: 30px !important;
