--- a/Thunderbird Beta theme/userChrome.css
+++ b/Thunderbird Beta theme/userChrome.css
@@ -4,10 +4,9 @@
 
 /*** This userChrome is for apt installs of Thunderbird ***/
 
-/****** menu bar ******/
-
-#toolbar-menubar {
-    margin-bottom: -1px !important;
+/****** rounded top window corners ******/
+#navigation-toolbox {
+    border-radius: 6px 6px 0 0 !important;
 }
 
 /****** window controls buttons ******/
@@ -86,8 +85,8 @@ toolbarseparator {
     margin: 4px 0px 4px 0px !important;
 }
 :root[uidensity="compact"] #unifiedToolbar {
-    min-height: 39px !important;
-    max-height: 39px !important;
+    min-height: 38px !important;
+    max-height: 38px !important;
 }
 :root[uidensity="touch"] #unifiedToolbar {
     min-height: 58px !important;
@@ -110,9 +109,10 @@ unified-toolbar {
     --tab-max-width: 225px !important;
 }
 #tabs-toolbar {
-    min-height: 36px !important;
-    max-height: 36px !important;
+    min-height: 35px !important;
+    max-height: 35px !important;
     box-shadow: none !important;
+    border-bottom: none !important;
 }
 .tabmail-tab[selected="true"] {
     min-height: 34px !important;
@@ -196,7 +196,6 @@ unified-toolbar {
     box-shadow: none !important;
     padding: 0px !important;
     margin-inline: 7px 6px !important;
-    margin-top: 5px !important;
 }
 :root:not([uidensity="compact"]):not([uidensity="touch"]) #button-appmenu:is([open="true"], :active) {
     min-width: 30px !important;
@@ -208,7 +207,6 @@ unified-toolbar {
     box-shadow: none !important;
     padding: 0px !important;
     margin-inline: 8px !important;
-    margin-top: 9px !important;
 }
 :root[uidensity="touch"] #button-appmenu:is([open="true"], :active) {
     min-width: 30px !important;
@@ -219,18 +217,18 @@ unified-toolbar {
     border-color: transparent !important;
     box-shadow: none !important;
     padding: 0px !important;
-    margin-inline: 11px !important;
-    margin-top: 14px !important;
+    margin-inline: 8px !important;
 }
 
 /**** colors ****/
 
 /* system colors focus */
 
+#navigation-toolbox:-moz-window-inactive {
+    background: linear-gradient(to bottom, #EAEAEA, #E9E9E9) !important;
+}
 #tabs-toolbar:-moz-window-inactive {
     background: linear-gradient(180deg, rgba(236,236,236,1) 0%, rgba(250,250,250,1) 10%, rgba(250,250,250,1) 100%) !important;
-    border-top: 1px solid rgba(0,0,0,0.17) !important;
-    border-bottom: 1px solid rgba(0,0,0,0.17) !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
     background: #FAFAFA !important;
@@ -245,10 +243,13 @@ unified-toolbar {
 
 /** system colors **/
 
+#navigation-toolbox {
+    border-bottom: 1px solid rgba(0,0,0,0.10) !important;
+    background: linear-gradient(to bottom, #E5E5E5, #DFDFDF) !important;
+}
 #tabs-toolbar {
     background: linear-gradient(180deg, rgba(223,223,223,1) 0%, rgba(241,241,241,1) 10%, rgba(241,241,241,1) 98%, rgba(223,223,223,1) 100%) !important;
     border-top: 1px solid rgba(0,0,0,0.17) !important;
-    border-bottom: 1px solid rgba(0,0,0,0.17) !important;
 }
 .tab-background[selected="true"] {
     background: #FFFFFF !important;
@@ -274,11 +275,12 @@ unified-toolbar {
 }
 
 /* stand alone dark focus */
-
+#navigation-toolbox:-moz-lwtheme-brighttext:-moz-window-inactive {
+    background: linear-gradient(to bottom, #3B3B3B, #383838) !important;
+}
 #tabs-toolbar:-moz-lwtheme-brighttext:-moz-window-inactive {
 	background: linear-gradient(180deg, rgb(48, 48, 48) 0%, rgb(51, 51, 51) 10%, rgb(51, 51, 51) 100%) !important;
 	border-top: 1px solid rgba(27, 27, 27, 1) !important;
-	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"]:-moz-lwtheme-brighttext:-moz-window-inactive {
 	background: rgb(51,51,51) !important;
@@ -302,10 +304,13 @@ input[type="search"]:-moz-lwtheme-brighttext {
     background: linear-gradient(#3C3C3C, #404040) !important;
     box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.1) !important;
 }
+#navigation-toolbox:-moz-lwtheme-brighttext {
+    border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
+    background: linear-gradient(to bottom, #343434, #2C2C2C) !important;
+}
 #tabs-toolbar:-moz-lwtheme-brighttext {
 	background: linear-gradient(180deg, rgb(42, 42, 42) 0%, rgb(45, 45, 45) 10%, rgb(45, 45, 45) 100%) !important;
 	border-top: 1px solid rgba(27, 27, 27, 1) !important;
-	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"]:-moz-lwtheme-brighttext {
     background: #3A3A3A !important;
@@ -337,10 +342,12 @@ toolbarseparator:-moz-lwtheme-brighttext  {
 /* system dark focus */
 
 @media (prefers-color-scheme: dark) {
+#navigation-toolbox:-moz-window-inactive {
+    background: linear-gradient(to bottom, #3B3B3B, #383838) !important;
+}
 #tabs-toolbar:-moz-window-inactive {
 	background: linear-gradient(180deg, rgb(48, 48, 48) 0%, rgb(51, 51, 51) 10%, rgb(51, 51, 51) 100%) !important;
 	border-top: 1px solid rgba(27, 27, 27, 1) !important;
-	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"]:-moz-window-inactive {
 	background: rgb(51,51,51) !important;
@@ -365,10 +372,13 @@ input[type="search"] {
     background: linear-gradient(#3C3C3C, #404040) !important;
     box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.1) !important;
 }
+#navigation-toolbox {
+    border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
+    background: linear-gradient(to bottom, #343434, #2C2C2C) !important;
+}
 #tabs-toolbar {
 	background: linear-gradient(180deg, rgb(42, 42, 42) 0%, rgb(45, 45, 45) 10%, rgb(45, 45, 45) 100%) !important;
 	border-top: 1px solid rgba(27, 27, 27, 1) !important;
-	border-bottom: 1px solid rgba(27, 27, 27, 1) !important;
 }
 .tab-background[selected="true"] {
     background: #3A3A3A !important;
