--- a/Elementary/userChrome.css
+++ b/Elementary/userChrome.css
@@ -17,7 +17,7 @@
     position: absolute !important;
     flex-direction: row !important;
     display: flex !important;
-    width: calc(100vw - 12px) !important;
+    width: calc(100vw - 2px) !important;
     height: 25px !important;
     justify-content: space-between !important;
 }
@@ -36,7 +36,6 @@
 :root[spacestoolbar="true"] .titlebar-buttonbox {
     appearance: none !important;
     top: -13px !important;
-    margin-right: 40px !important;
     position: absolute !important;
     flex-direction: row !important;
     display: flex !important;
@@ -45,8 +44,11 @@
     justify-content: space-between !important;
 }
 :root[spacestoolbar="true"][uidensity="touch"] .titlebar-max {
-    margin-right: 18px !important;
+    margin-right: 8px !important;
+}
+:root[spacestoolbar="true"][uidensity="compact"] .titlebar-max {
+    margin-right: -10px !important;
 }
 :root[spacestoolbar="true"]:not([uidensity="touch"]):not([uidensity="compact"]) .titlebar-max {
-    margin-right: 8px !important;
+    margin-right: -2px !important;
 }
