--- a/Minimize Right/userChrome.css
+++ b/Minimize Right/userChrome.css
@@ -14,6 +14,7 @@
 .titlebar-buttonbox {
     appearance: none !important;
     top: -13px !important;
+    margin-left: 4px !important;
     position: absolute !important;
     flex-direction: row !important;
     display: flex !important;
