--- a/Replace Maximize to Minimize/userChrome.css
+++ b/Replace Maximize to Minimize/userChrome.css
@@ -14,10 +14,11 @@
 .titlebar-buttonbox {
     appearance: none !important;
     top: -13px !important;
+    margin-left: 3px !important;
     position: absolute !important;
     flex-direction: row !important;
     display: flex !important;
-    width: calc(100vw - 12px) !important;
+    width: calc(100vw - 5px) !important;
     height: 25px !important;
     justify-content: space-between !important;
 }
@@ -36,20 +37,19 @@
 :root[spacestoolbar="true"] .titlebar-buttonbox {
     appearance: none !important;
     top: -13px !important;
-    margin-right: 40px !important;
     position: absolute !important;
     flex-direction: row !important;
     display: flex !important;
-    width: calc(100vw - 52px) !important;
+    width: calc(100vw - 39px) !important;
     height: 25px !important;
     justify-content: space-between !important;
 }
 :root[spacestoolbar="true"][uidensity="compact"] .titlebar-min {
-    margin-right: -3px !important;
+    margin-right: 3px !important;
 }
 :root[spacestoolbar="true"][uidensity="touch"] .titlebar-min {
-    margin-right: 15px !important;
+    margin-right: 21px !important;
 }
 :root[spacestoolbar="true"]:not([uidensity="touch"]):not([uidensity="compact"]) .titlebar-min {
-    margin-right: 5px !important;
+    margin-right: 11px !important;
 }
