--- a/base.css
+++ b/base.css
@@ -76,19 +76,19 @@ unified-toolbar {
     padding-inline: 16px !important;
     border-radius: 0px !important;
 }
-:root[uidensity="compact"] menuitem[_moz-menuactive="true"],
+:root[uidensity="compact"] menuitem[_moz-menuactive="true"]:not(#mailContext-navigation > menuitem),
 :root[uidensity="compact"] menu[_moz-menuactive="true"]:not(menubar > menu) {
     margin: 0px !important;
     padding-inline: 11px !important;
     border-radius: 0px !important;
 }
-:root:not([uidensity="touch"]):not([uidensity="compact"]) menuitem[_moz-menuactive="true"],
+:root:not([uidensity="touch"]):not([uidensity="compact"]) menuitem[_moz-menuactive="true"]:not(#mailContext-navigation > menuitem),
 :root:not([uidensity="touch"]):not([uidensity="compact"]) menu[_moz-menuactive="true"]:not(menubar > menu) {
     margin: 0px !important;
     padding-inline: 12px !important;
     border-radius: 0px !important;
 }
-:root[uidensity="touch"] menuitem[_moz-menuactive="true"],
+:root[uidensity="touch"] menuitem[_moz-menuactive="true"]:not(#mailContext-navigation > menuitem),
 :root[uidensity="touch"] menu[_moz-menuactive="true"]:not(menubar > menu) {
     margin: 0px !important;
     padding-inline: 12px !important;
