--- a/base.css
+++ b/base.css
@@ -58,10 +58,10 @@
 .titlebar-min:active image,
 .titlebar-max:active image,
 .titlebar-restore:active image {
-    background-color: rgba(0,0,0,0.03) !important;
+    background-color: rgba(0,0,0,0.05) !important;
     border-radius: 3px !important;
     border: 1px solid rgba(0,0,0,0.2) !important;
-    box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.07) !important;
+    box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.07), 0 1px 0 0 rgba(255,255,255,0.5) !important;
 }
 
 /* dark theme */
@@ -112,10 +112,10 @@
 .titlebar-min:active image,
 .titlebar-max:active image,
 .titlebar-restore:active image {
-    background-color: rgba(0,0,0,0.03) !important;
+    background-color: rgba(0,0,0,0.1) !important;
     border-radius: 3px !important;
-    border: 1px solid rgba(0,0,0,0.2) !important;
-    box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.07) !important;
+    border: 1px solid rgba(0,0,0,0.5) !important;
+    box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.15), 0 1px 0 0 rgba(255,255,255,0.1) !important;
 }}
 
 /****** rounded top window corners ******/
@@ -138,7 +138,7 @@ input[type="search"] {
     min-height: 27px !important;
     border: 1px solid #B8B8B8 !important;
     background: #ffffff !important;
-    box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.8) !important;
+    box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.3), 0 1px 0 0 rgba(255,255,255,0.5) !important;
 }
 form {
     min-height: 26px !important;
@@ -262,10 +262,10 @@ unified-toolbar {
     border-radius: 3.5px !important;
 }
 .tab-close-icon[src="chrome://global/skin/icons/close.svg"] {
-    content: url("data:image/svg+xml,%3Csvg height='12' width='12' xmlns='http://www.w3.org/2000/svg'%3E%3Cg color='%23333333' transform='translate%28-713 -157%29'%3E%3Cpath d='M720.97 163.556L723.5 161l1.5 1.5-2.598 2.487L725 167.5l-1.5 1.5-2.512-2.599L718.5 169l-1.5-1.5 2.586-2.5-2.586-2.5 1.5-1.5z' fill='%23333333' overflow='visible' style='marker:none'/%3E%3C/g%3E%3C/svg%3E") !important;
-    width: 12px !important;
-    height: 12px !important;
-    margin: 2px 6px 6px 2px !important;
+    content: url("data:image/svg+xml,%3Csvg height='16' width='16' version='1.1' id='svg1' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs id='defs1' /%3E%3Cpath id='rect1' style='opacity:1;fill:%23333333;fill-opacity:1;stroke:none;stroke-width:1;stroke-opacity:0.498039;-inkscape-stroke:none' d='M 0.78168445 6.4081552 C 0.64612209 6.2725928 0.45772309 6.1885654 0.2499733 6.1885654 L -0.2499733 6.1885654 C -0.66547288 6.1885654 -0.99989318 6.5229857 -0.99989318 6.9384853 L -0.99989318 10.313815 L -4.3752232 10.313815 C -4.7907228 10.313815 -5.1251431 10.648236 -5.1251431 11.063735 L -5.1251431 11.563682 C -5.1251431 11.979181 -4.7907228 12.313602 -4.3752232 12.313602 L -0.99989318 12.313602 L -0.99989318 15.688932 C -0.99989318 16.104431 -0.66547288 16.438852 -0.2499733 16.438852 L 0.2499733 16.438852 C 0.66547288 16.438852 0.99989318 16.104431 0.99989318 15.688932 L 0.99989318 12.313602 L 4.3752232 12.313602 C 4.7907228 12.313602 5.1251431 11.979181 5.1251431 11.563682 L 5.1251431 11.063735 C 5.1251431 10.648236 4.7907228 10.313815 4.3752232 10.313815 L 0.99989318 10.313815 L 0.99989318 6.9384853 C 0.99989318 6.7307355 0.91724681 6.5437176 0.78168445 6.4081552 z ' transform='rotate(-45)' /%3E%3C/svg%3E") !important;
+    width: 16px !important;
+    height: 16px !important;
+    margin: 2px 6px 2px 2px !important;
 }
 #tabs-toolbar tab:not([visuallyselected="true"]):not(:hover) .tab-close-button {
     opacity: 0 !important;
@@ -452,7 +452,7 @@ input[type="search"] {
     background: rgba(255,255,255, 0.2) !important;
 }
 .tab-close-icon[src="chrome://global/skin/icons/close.svg"] {
-    content: url("data:image/svg+xml,%3Csvg height='12' width='12' xmlns='http://www.w3.org/2000/svg'%3E%3Cg color='%23333333' transform='translate%28-713 -157%29'%3E%3Cpath d='M720.97 163.556L723.5 161l1.5 1.5-2.598 2.487L725 167.5l-1.5 1.5-2.512-2.599L718.5 169l-1.5-1.5 2.586-2.5-2.586-2.5 1.5-1.5z' fill='rgb(255, 255, 255)' overflow='visible' style='marker:none'/%3E%3C/g%3E%3C/svg%3E") !important;
+    content: url("data:image/svg+xml,%3Csvg height='16' width='16' version='1.1' id='svg1' xmlns='http://www.w3.org/2000/svg' xmlns:svg='http://www.w3.org/2000/svg'%3E%3Cdefs id='defs1' /%3E%3Cpath id='rect1' style='opacity:1;fill:%23ffffff;fill-opacity:1;stroke:none;stroke-width:1;stroke-opacity:0.498039;-inkscape-stroke:none' d='M 0.78168445 6.4081552 C 0.64612209 6.2725928 0.45772309 6.1885654 0.2499733 6.1885654 L -0.2499733 6.1885654 C -0.66547288 6.1885654 -0.99989318 6.5229857 -0.99989318 6.9384853 L -0.99989318 10.313815 L -4.3752232 10.313815 C -4.7907228 10.313815 -5.1251431 10.648236 -5.1251431 11.063735 L -5.1251431 11.563682 C -5.1251431 11.979181 -4.7907228 12.313602 -4.3752232 12.313602 L -0.99989318 12.313602 L -0.99989318 15.688932 C -0.99989318 16.104431 -0.66547288 16.438852 -0.2499733 16.438852 L 0.2499733 16.438852 C 0.66547288 16.438852 0.99989318 16.104431 0.99989318 15.688932 L 0.99989318 12.313602 L 4.3752232 12.313602 C 4.7907228 12.313602 5.1251431 11.979181 5.1251431 11.563682 L 5.1251431 11.063735 C 5.1251431 10.648236 4.7907228 10.313815 4.3752232 10.313815 L 0.99989318 10.313815 L 0.99989318 6.9384853 C 0.99989318 6.7307355 0.91724681 6.5437176 0.78168445 6.4081552 z ' transform='rotate(-45)' /%3E%3C/svg%3E") !important;
 }
 #button-appmenu:is([open="true"], :active) {
     background: rgba(255,255,255, 0.2) !important;
